# mammography-agent

./: README.md  main.py  pyproject.toml
agents/: README.md  __init__.py  clinical_text_examples.py  image_analyzer.py  orchestrator.py  text_analyzer.py
agents/acr_demo/: __init__.py  acr_agent.py  demo_runner.py
agents/data/: __init__.py  user_input.py
agents/risk_assessment/: __init__.py  demo_risk_assessment.py  risk_calculator.py
agents/static/: __init__.py  messages.py
mamaria/: .gitignore
mamaria/codes/: agent.py
ui/: README.md  patient_simulator.py  run_simulator.bat  run_simulator.py  run_simulator.sh  test_connection.py
